Fixed some typos in lecture 8.

--- a/astro400B_lecture_8.tex
+++ b/astro400B_lecture_8.tex
@@ -222,7 +222,7 @@ $\Omega(R) = V(R)/R$, so the curve spreads out on a spiral as $\phi = \phi_0 + \
 In other words, $f(R,t) = -\phi_0 - \Omega(R)t$.  At the Galactic radius $R\sim8~\kpc$
 where $V\sim200~\km~\s^{-1}$ we have
 \begin{equation}
-\cot i = R \left| \frac{d\Omega(R)}{dR}\right| r \approx \frac{200}{8}\left(\frac{t}{1~\Gyr}\right)
+\cot i = R \left| \frac{d\Omega(R)}{dR}\right| t \approx \frac{200}{8}\left(\frac{t}{1~\Gyr}\right)
 \end{equation}
 \noindent
 which gives
@@ -250,7 +250,7 @@ the guiding centers will be at
 \noindent
 and the stars will lie at
 \begin{equation}
-x = X\cos\{\kappa t + 2[\phi_{gc}(t) - \Omega t]\} = X \cos](2\Omega-\kappa)t - 2\phi_{gc}(t)].
+x = X\cos\{\kappa t + 2[\phi_{gc}(t) - \Omega t]\} = X \cos[(2\Omega-\kappa)t - 2\phi_{gc}(t)].
 \end{equation}
 The long axis of the oval will now point along the direction where
 \begin{equation}
@@ -258,7 +258,7 @@ The long axis of the oval will now point along the direction where
 \end{equation}
 \noindent
 where $\Omega_p$ is the {\it pattern speed} of the spiral that will return to its original state after a time $T = 2\pi/\Omega_p$.
-This will produce a two-arm spiral.  We can make an $m-$arm spiral by setting $\psi = 4\phi_{gc}$ and 
+This will produce a two-arm spiral.  We can make an $m-$arm spiral by setting $\psi = m\phi_{gc}$ and 
 then the pattern speed would be $\Omega_p = \Omega - \kappa/m$.
 
 Once stars do collect in spiral arms their gravity
