Fixed typo in hydrostatic equilibrium eqn.

--- a/astro400B_lecture_10.tex
+++ b/astro400B_lecture_10.tex
@@ -59,7 +59,7 @@ the pressure gradient in the gas will balance the gravitational
 force pulling the gas toward the center of the group or cluster.
 We can then write that
 \begin{equation}
-\nabla P = -\rho(r) \frac{GM(<r)}{r}
+\nabla P = -\rho(r) \frac{GM(<r)}{r^2}
 \end{equation}
 \noindent
 where the fraction on the RHS is the gravitational acceleration.
