Wrote first page of lecture 11.

--- a/astro400B_definitions.tex
+++ b/astro400B_definitions.tex
@@ -114,6 +114,9 @@
 %vector radius
 \newcommand{\vr}{\mathbf{r}}
 
+%vector k vec
+\newcommand{\vk}{\mathbf{k}}
+
 %vector position
 \newcommand{\vx}{\mathbf{x}}
 \newcommand{\vz}{\mathbf{z}}
