Minor typo in lecture 10 fixed.

--- a/astro400B_lecture_10.tex
+++ b/astro400B_lecture_10.tex
@@ -74,7 +74,7 @@ P = \frac{\rho}{\mu m_{p}}kT
 \noindent
 and
 \begin{equation}
-M(<r) = \frac{k}{\mu m_p}\frac{r}{G \rho(r)} \frac{d}{dr}(-\rho T).
+M(<r) = \frac{k}{\mu m_p}\frac{r^2}{G \rho(r)} \frac{d}{dr}(-\rho T).
 \end{equation}
 \noindent
 We can infer the density profile from the gas surface brightness
