Fixed some minor typos in lecture 10.

--- a/astro400B_lecture_10.tex
+++ b/astro400B_lecture_10.tex
@@ -212,7 +212,7 @@ the impluse approximation.
 
 {\bf Show figure 7.14 of SG.}
 
-Without the lense $L$, the object would appear at a distance
+Without the lense $L$, the object would appear at an angle
 $\beta = y/d_{S}$ as long as $d_{S} \gg y$.
 The light is bent by $\alpha$, so the object instead appears
 at an angle $\theta \approx x/d_S$ (for $d_S \gg x$).
@@ -295,12 +295,12 @@ If the lens is axisymmetric, we can evaluate this integral as
 \noindent
 The change in the position angle is
 \begin{equation}
-\theta - \beta = \alpha(\theta)\frac{d_{LS}}{d_S} \frac{1}{\theta} \cdot \frac{4GM(<b)}{c^2}\frac{d_{LS}}{d_L d_S}
+\theta - \beta = \alpha(\theta)\frac{d_{LS}}{d_S} = \frac{1}{\theta} \cdot \frac{4GM(<b)}{c^2}\frac{d_{LS}}{d_L d_S}
 \end{equation}
 \noindent
 but since $b = \theta d_L$, we can re-write this in terms of the critical density for lensing
 \begin{equation}
-\beta = \theta\left[1 - \frac{1}{\Sigma_{\mathrm{crit}}}\frac{M(<b)}{\pi b^2}\right],~\mathrm{where}~\Sigma_{\mathrm{crit}} \equiv \frac{c^2}{4\pi G}\frac{d_S}{d_L d_LS}
+\beta = \theta\left[1 - \frac{1}{\Sigma_{\mathrm{crit}}}\frac{M(<b)}{\pi b^2}\right],~\mathrm{where}~\Sigma_{\mathrm{crit}} \equiv \frac{c^2}{4\pi G}\frac{d_S}{d_L d_{LS}}
 \end{equation}
 \noindent
 The quantity $M(<b)/\pi b^2$ is just the average surface density within $b$.
