--- a/astro400B_lecture_11.tex
+++ b/astro400B_lecture_11.tex
@@ -107,7 +107,7 @@ We know from the CMB that the universe is homogeneous on
 large scales.  We can describe the distance between two
 points in such a universe by the relation
 \begin{equation}
-ds^2 = a^2 \left( \frac{d\sigma^2}{1-k\sigma^2} + \sigma^2 d\theta^2 + \sigma^2 \sin^2 \theta d\phi^2\right)
+ds^2 = R^2 \left( \frac{d\sigma^2}{1-k\sigma^2} + \sigma^2 d\theta^2 + \sigma^2 \sin^2 \theta d\phi^2\right)
 \end{equation}
 \noindent
 where $\sigma, \theta, \phi$ are spherical polar coordinates in curved space.
@@ -116,12 +116,12 @@ is {\it closed} with positive curvature.  If $k=-1$ the universe is
 {\it open} with negative curvature.  If $k=0$ we have normal Euclidean
 flat space.
 
-We can include cosmic expansion just by setting $a = a(t)$. Galaxies
+We can include cosmic expansion just by setting $R = R(t)$. Galaxies
 remain at points with fixed values of $\sigma, \theta, \phi$ called
 the comoving coordinates.  Two systems a distance $d$ in this coordinate system
 move apart from each other at the rate
 \begin{equation}
-V = \dot{d} = \frac{\dot{a}(t)}{a(t)}d \equiv H(t) d
+V = \dot{d} = \frac{\dot{R}(t)}{R(t)}d \equiv H(t) d
 \end{equation}
 \noindent
 where $H(t)$ is the Hubble parameter that has $H(t_0) = H_0$
@@ -146,7 +146,7 @@ Place yourself at the origin.  Then the light
 received from a galaxy at comoving distance
 $\sigma_e$ has followed the path
 \begin{equation}
-\frac{c dt}{a(t)} = -\frac{d\sigma}{\sqrt{1-k\sigma^2}}.
+\frac{c dt}{R(t)} = -\frac{d\sigma}{\sqrt{1-k\sigma^2}}.
 \end{equation}
 \noindent
 As the universe grows, light covers less and less 
@@ -158,27 +158,102 @@ Consider a light wave that leaves at time $t_e$
 from a distance $\sigma_e$ and arrives today $t_0$.
 We have that
 \begin{equation}
-c\int_{t_e}^{t_0} \frac{dt}{a(t)} = \int_0^{\sigma_e} \frac{d\sigma}{\sqrt{1-k\sigma^2}}.
+c\int_{t_e}^{t_0} \frac{dt}{R(t)} = \int_0^{\sigma_e} \frac{d\sigma}{\sqrt{1-k\sigma^2}}.
 \end{equation}
 \noindent
 Now consider another wave leaving at a later time $t_e + \Delta t_e$.
 It arrives at $t + \Delta t$.  The comoving position hasn't changed
 so we have that
 \begin{equation}
-\int_{t_e+\Delta t_e}^{t_0 + \Delta t} \frac{dt}{a(t)} = \int_{t_e}^{t_0} \frac{dt}{a(t)},~~\mathrm{so}~\frac{\Delta t_e}{a(t_e)} = \frac{\Delta t}{a(t_0)},
+\int_{t_e+\Delta t_e}^{t_0 + \Delta t} \frac{dt}{R(t)} = \int_{t_e}^{t_0} \frac{dt}{R(t)},~~\mathrm{so}~\frac{\Delta t_e}{R(t_e)} = \frac{\Delta t}{R(t_0)},
 \end{equation}
 \noindent
-provided that $\Delta t \ll a(t)/\dot{a}(t)$ (e.g., a Hubble time).  So all processes appear to be
-slowed by a factor $a(t_0)/a(t_e)$.
+provided that $\Delta t \ll R(t)/\dot{R}(t)$ (e.g., a Hubble time).  So all processes appear to be
+slowed by a factor $R(t_0)/R(t_e)$.
 
 If the light was emitted with wavelength $\lambda_e = c \Delta t_e$, it is
 received with wavelength $\lambda_{obs} = c \Delta t$.  The
 redshift is then
 \begin{equation}
-1 + z = \frac{\lambda_{obs}}{\lambda_e} = \frac{a(t_0)}{a(t_e)}.
+1 + z = \frac{\lambda_{obs}}{\lambda_e} = \frac{R(t_0)}{R(t_e)}.
 \end{equation}
 
+\section{Expansion History}
 
+The rate of expansion is determined by the gravitational effects
+of the energy densities it contains.  We can model the expansion
+using Newtonian physics first, and then use general relativity
+to revise for a more correct answer.
 
+Consider a sphere of radius $r$ at time $t$ when the 
+universe has a typical density $\rho(t)$, and assume
+$r$ is much less than any curvature radius in the 
+universe.  Assuming symmetry about $r=0$, the
+gravitational force at radius $r$ is just supplied by the
+mass within the sphere.  If the sphere
+is large enough that pressure forces are small, then
+the force on a object of mass $m$ at radius $r$ is
+\begin{equation}
+m \frac{d^2 r}{dt^2} - \frac{G m M(<r)}{r^2} = - \frac{4\pi Gm}{3}\rho(t)r.
+\end{equation}
+\noindent
+The radius of the sphere of matter is expanding with the
+rest of the universe, so $r\propto R(t)$.  The mass of the
+cloud cancels, such that
+\begin{equation}
+\label{eqn:friedman_A}
+\ddot{R}(t) = - \frac{4\pi G}{3} \rho(t) R(t).
+\end{equation}
+\noindent
+The mass doesn't change, so $\rho(t) R(t)$ is a constant.
+We can multiply by $\dot{R}(t)$ to find
+\begin{equation}
+\frac{1}{2} \frac{d}{dt}[\dot{R}^2(t)] = - \frac{4 \pi G}{3} \frac{\rho(t_0)R^3(t_0)}{R^2(t)} \dot{R}(t)
+\end{equation}
+\noindent
+where $t_0$ is the present day.  We then integrate to find
+\begin{equation}
+\label{eqn:friedman_B}
+\dot{R}^2(t) = \frac{8\pi G}{3}\rho(t) R^2(r) - kc^2
+\end{equation}
+\noindent
+where $k$ is a constant of integration.  Turns out Equation
+\ref{eqn:friedman_B} is valid in GR, and tells us
+that $k$ is the same constant as in the metric.
 
+We appeal to thermodynamics to tell us that
+as heat $\Delta Q$ flows into a volume $V$ its
+internal energy $E$ must increase, or it expands
+and does work against pressure
+\begin{equation}
+\Delta Q = \Delta E + p \Delta V = V \Delta(\rho c^2) + (\rho c^2 + p)\Delta V
+\end{equation}
+\noindent
+where $\rho$ includes all the forms of matter and energy.
+But no volume $V$ gains heat at the expense of another and
+\begin{equation}
+\Delta Q = 0 = \Delta \rho + \left(\rho + \frac{p}{c^2}\right)\frac{\Delta V}{V}
+\end{equation}
+\noindent
+or
+\begin{equation}
+\frac{d\rho}{dt} = - c \frac{\dot{R}(t)}{R(t)}\left( \rho + \frac{p}{c^2}\right)
+\end{equation}
+\noindent
+Differentiating Equation \ref{eqn:friedman_B} and substituting for $d\rho/dt$
+yields
+\begin{equation}
+\label{eqn:friedman_C}
+\ddot{R}(t) = - \frac{4\pi G}{3} R(t) \left[ \rho(t) + \frac{3p(t)}{c^2}]
+\end{equation}
+\noindent
+So in GR, the pressure $p$ adds to the gravitational attraction. 
+Equations \ref{eqn:friedman_B} and \ref{eqn:friedman_C} are
+called the {\it Friedmann equations}.  For cool matter
+the pressure $p \sim \rho c_s^2$ where the sound speed $c_s \ll c$,
+and the pressure term in equation \ref{eqn:friedman_C} is 0.
+Then $\rho(t)\propto R^{-3}$.  For radiation and particles,
+$p\approx pc^2/3$ and $\rho(t) \propto R^{-4}(t)$.
+For matter and radiation $\rho + 3p/c^2$ is positive and the
+universe decelerates. PAGE 328.
 \end{document}
